<package>
  <name>pointcloud_octomap_updater2</name>
  <version>0.1.0</version>
  <description>pointcloud_octomap_updater2: a pointcloud_octomap_updater that a filtered_cloud with rgb data if available</description>

  <maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_ros_perception</build_depend>  
  

  <run_depend>moveit_core</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_ros_perception</run_depend>    

 <export>
    <moveit_ros_perception plugin="${prefix}/plugin.xml"/> 
  </export>

</package>
